# Geo_sim

./: .gitignore  3D_VISUALIZATION_SUMMARY.md  ADAPTIVE_CONSTRAINTS_AND_MULTI_FIDELITY_GUIDE.md  API_REFERENCE.md  CHEMICAL_MECHANICAL_COUPLING_SUMMARY.md  CHEMICAL_MECHANICAL_IMPLEMENTATION_COMPLETE.md  EXPERIMENT_PLAN.md  GPU_ACCELERATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  MACHINE_LEARNING_SUMMARY.md  MATERIAL_MODELS_COMPLETION_SUMMARY.md  MATERIAL_MODELS_ENHANCEMENT.md  MATERIAL_MODELS_SUMMARY.md  MISSING_FEATURES_ANALYSIS.md  ML_INTEGRATION_GUIDE.md  ML_NUMERICAL_INTEGRATION_GUIDE.md  MODULE_INVENTORY.md  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  PAPER.md  PARALLEL_OPTIMIZATION_SUMMARY.md  PUBLICATION_PLAN.md  QUICK_START_GUIDE.md  README.md  REFERENCES.md  REPORT.md  RUN_EXPERIMENTS.md  THEORY.md  UNDERWORLD2_COMPARISON.md  UNDERWORLD2_MATERIAL_MODELS_SUMMARY.md  VALIDATION.md  contour_plotly.html  gpu_acceleration_demo.py  gpu_demo.py  heatmap_plotly.html  install.sh  machine_learning_demo.py  main.py  mesh_plotly.html  ml_integration_demo.py  (+13 more)
adaptivity/: __init__.py  advanced_mesh.py  error_estimator.py  mesh_refinement.py
core/: __init__.py  cli.py  complete_interface_demo.py  debug_tools.py  geodynamic_simulation.py  module_integration_demo.py  numba_accelerator.py  stokes_solver.py  unified_api.py  unified_api_demo.py  usage_examples.py
coupling/: __init__.py  chemical_mechanical.py  electro_mechanical.py  fluid_solid.py  multiphase_fluid.py  thermal_mechanical.py  thermodynamics.py
ensemble/: __init__.py  multi_fidelity.py
examples/: config.yaml  demo.py  quickstart.ipynb
experiments/: PAPER_WORKFLOW.md  REPRODUCE_BLOCKED_STOKES.md  benchmark_blocked_comparison.py  benchmark_blocked_stokes_nonlinear.py  benchmark_external_velocity_baselines.py  benchmark_stokes_3d_convergence.py  benchmark_stokes_3d_methods.py  benchmark_stokes_3d_scalable.py  benchmark_stokes_3d_scaling.py  benchmark_unstructured_3d.py  build_petsc_hypre_env.sh  export_blocked_stokes_paper_tables.py  generate_jcp_artifacts.py  merge_blocked_comparison_results.py  plot_paper_figures.py  run_experiments.py  stokes_baseline_common.py  summarize_results.py  summarize_stokes_3d.py  tune_blocked_stokes.py
finite_elements/: __init__.py  assembly.py  basis_functions.py  boundary_conditions.py  dof_manager.py  elements.py  global_assembly.py  mesh_generation.py  quadrature.py  solvers.py  transformations.py  working_solver.py
gpu_acceleration/: GEODYNAMICS_IMPLEMENTATION_SUMMARY.md  GNN_IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  README.md  README_RL_GNN.md  README_geological_ml.md  RL_IMPLEMENTATION_SUMMARY.md  __init__.py  adaptive_constraints_demo.py  advanced_ml.py  cuda_acceleration.py  geodynamics_demo.py  geodynamics_gnn.py  geological_examples.py  geological_ml_framework.py  gnn_pinn_integration_demo.py  meta_amg.py  meta_learning_demo.py  ml_optimization.py  neural_amg.py  parallel_computing.py  physics_integrated_ml.py  rl_gnn_demo.py  rl_optimization_demo.py  test_geological_optimizations.py  test_surrogate_extensions.py
materials/: __init__.py  advanced_material_models.py  advanced_plastic_models.py  damage_models.py  experimental_validation.py  fracture_models.py  hardening_models.py  phase_change_kinetics.py  phase_change_models.py  plastic_models.py
parallel/: README_dynamic_communication.md  __init__.py  advanced_parallel_solver.py  advanced_parallel_solver_v2.py  domain_decomposition.py  dynamic_communication_demo.py  parallel_solvers.py  test_underworld_surpassing.py  underworld_surpassing_demo.py  usage_example.py
solvers/: README_ENHANCED_SOLVERS.md  __init__.py  enhanced_solver_demo.py  hierarchy_transfer.py  multigrid_solver.py  multiphysics_coupling_solver.py
tests/: conftest.py  test_blocked_stokes_nonlinear.py  test_blocked_stokes_paper_tables.py  test_experiment_benchmarks.py  test_finite_elements.py  test_geodynamic_simulation.py  test_hierarchy_transfer.py  test_materials.py  test_solvers.py  (+8 more)
(+723 files in other folders)
