[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "geo_sim"
version = "1.0.0"
description = "Geodynamic simulation framework with multi-physics coupling, GPU acceleration, and ML integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "GeoSim Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
    "pyyaml>=6.0",
    "h5py>=3.7.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0", "torchvision>=0.10.0"]
gpu = ["cupy-cuda11x", "numba>=0.56.0"]
rl = ["stable-baselines3>=1.6.0", "gym>=0.21.0"]
gnn = ["torch-geometric>=2.0.0", "networkx>=2.6.0"]
mpi = ["mpi4py>=3.1.0", "petsc4py>=3.17.0"]
visualization = ["meshio>=5.0.0", "pyvista>=0.35.0", "vtk>=9.0.0"]
dev = ["pytest>=6.2.0", "pytest-cov>=2.12.0", "black>=21.0.0", "flake8>=3.9.0"]
ml = [
    "scikit-learn>=1.0.0",
    "optuna>=3.0.0",
    "gpytorch>=1.9.0",
    "lightgbm>=3.3.0",
    "xgboost>=1.6.0",
    "catboost>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "finite_elements*", "materials*", "solvers*", "coupling*", "time_integration*", "adaptivity*", "parallel*", "gpu_acceleration*", "visualization*", "ensemble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.flake8]
max-line-length = 100
exclude = ["__pycache__", ".git", ".idea"]
