[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "geo_sim"
version = "2.0.0"
description = "Geodynamic simulation framework — faster & easier than Underworld. Runs on macOS/Windows/Linux with zero-config GPU via MPS/CUDA."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "GeoSim Team"}]
keywords = ["geodynamics", "mantle-convection", "stokes", "finite-element", "multigrid", "gpu"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pyyaml>=6.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
torch = ["torch>=1.9.0", "torchvision>=0.10.0"]
numba = ["numba>=0.56.0"]
gnn = ["torch-geometric>=2.0.0", "networkx>=2.6.0"]
viz = ["meshio>=5.0.0"]
full = ["geo_sim[torch,numba,gnn,viz]"]
dev = ["pytest>=6.2.0", "pytest-cov>=2.12.0"]

[project.scripts]
geo-sim = "core.cli:main"
geo-sim-demo = "core.cli:cmd_demo"
geo-sim-benchmark = "core.cli:cmd_benchmark"

[project.urls]
Homepage = "https://github.com/songyining64/Geo_sim"
Repository = "https://github.com/songyining64/Geo_sim.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "finite_elements*", "materials*", "solvers*", "time_integration*", "adaptivity*", "gpu_acceleration*", "ensemble*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
